[gd_scene load_steps=8 format=3 uid="uid://ehl8yelpph3d"]

[ext_resource type="Script" uid="uid://dus8t87f1jja" path="res://scripts/pause_menu.gd" id="1_024ri"]
[ext_resource type="Theme" uid="uid://bk7as4gxm1c8l" path="res://ui/theme.tres" id="2_8qshb"]
[ext_resource type="FontFile" uid="uid://berylv85eo6t1" path="res://imports/fonts/VCR_OSD_MONO_1.001.ttf" id="2_50iu1"]

[sub_resource type="LabelSettings" id="LabelSettings_8qshb"]
font = ExtResource("2_50iu1")
font_size = 180
outline_size = 30
outline_color = Color(0, 0, 0, 0.392157)

[sub_resource type="Theme" id="Theme_8qshb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8qshb"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_50iu1"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0

[node name="menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_024ri")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(493, 332)

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 80

[node name="Label" type="Label" parent="CenterContainer/GridContainer/MarginContainer"]
layout_mode = 2
text = "KEY_PAUSED"
label_settings = SubResource("LabelSettings_8qshb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="left-right" type="GridContainer" parent="CenterContainer/GridContainer"]
layout_mode = 2
mouse_filter = 0
columns = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer/GridContainer/left-right"]
layout_mode = 2

[node name="resume" type="Button" parent="CenterContainer/GridContainer/left-right/GridContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_8qshb")
text = "KEY_RESUME"

[node name="settings" type="Button" parent="CenterContainer/GridContainer/left-right/GridContainer"]
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_8qshb")
text = "KEY_SETTINGS"

[node name="quit" type="Button" parent="CenterContainer/GridContainer/left-right/GridContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_8qshb")
text = "KEY_QUIT"

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/GridContainer/left-right"]
custom_minimum_size = Vector2(1115, 0)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer/GridContainer/left-right/PanelContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2

[node name="diary_section" type="MarginContainer" parent="CenterContainer/GridContainer/left-right/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(1157, 226)
layout_mode = 2
theme = ExtResource("2_8qshb")

[node name="diary_entry" type="Label" parent="CenterContainer/GridContainer/left-right/PanelContainer/GridContainer/diary_section"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/GridContainer/left-right/PanelContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = SubResource("Theme_8qshb")
theme_override_constants/margin_top = 10

[node name="page_navigation" type="GridContainer" parent="CenterContainer/GridContainer/left-right/PanelContainer/GridContainer/MarginContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
columns = 3

[node name="prev_page" type="Button" parent="CenterContainer/GridContainer/left-right/PanelContainer/GridContainer/MarginContainer/page_navigation"]
layout_mode = 2
size_flags_horizontal = 10
mouse_default_cursor_shape = 2
theme = ExtResource("2_8qshb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8qshb")
text = "<"

[node name="page_index" type="Label" parent="CenterContainer/GridContainer/left-right/PanelContainer/GridContainer/MarginContainer/page_navigation"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("2_8qshb")
text = "# / #"

[node name="next_page" type="Button" parent="CenterContainer/GridContainer/left-right/PanelContainer/GridContainer/MarginContainer/page_navigation"]
layout_mode = 2
size_flags_horizontal = 8
mouse_default_cursor_shape = 2
theme = ExtResource("2_8qshb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_50iu1")
text = ">"

[node name="audio" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="CenterContainer/GridContainer/left-right/GridContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/left-right/GridContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/left-right/GridContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/left-right/PanelContainer/GridContainer/MarginContainer/page_navigation/prev_page" to="." method="_on_prev_page_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/left-right/PanelContainer/GridContainer/MarginContainer/page_navigation/next_page" to="." method="_on_next_page_pressed"]
